Finished editing UI

--- a/laststeps.html
+++ b/laststeps.html
@@ -12,7 +12,7 @@
 <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet" id="font-awesome-5-kit-css">
 <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet" id="font-awesome-5-kit-css">
 <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet" id="font-awesome-5-kit-css">
-<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
 <link rel="icon" type="image/png" href="assets/logo192.png">
@@ -187,6 +187,7 @@ If you'd like our services why not spread the word.<br><br>
 <li><a href="/">Home (NightLight AI)</a></li>
 <li><a href="/privacy">Privacy</a></li>
 <li><a href="terms">Terms</a></li>
+<small>By using our services you agree to our <a href="terms">Terms of Services</a> and <a href="/cookie">Cookie Policy</a></small>
 </ul>
 </div>
 </div>
