--- a/terms.html
+++ b/terms.html
@@ -15,9 +15,10 @@
 <title>Terms of Service - NephronAI </title>
 <meta name="description" content="Terms of Service - NephronAI, an AI project by NightLight AI that aims to uses AI to counter Chronic Kidney Disease.">
 <meta name="keywords" content="terms, privacy, NephronAI, chronic kidney disease, nightlight ai">
-<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
+<link rel="stylesheet" href="css/classify.min.css">
 <link rel="icon" type="image/png" href="assets/logo192.png">
 <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -59,9 +60,9 @@
 <div class="col-md-7 probootstrap-intro-text">
 <h1 class="probootstrap-animate">Terms of Service NephronAI</h1>
 <div class="probootstrap-subtitle probootstrap-animate">
-<h2>Our terms of services are being updated very soon</h2>
+<h3 style="color:white;">We're aren't the same without you! But our Terms of Services are equally flexible as the services we provide, if not more. Using our services directly mean you agree to them.</h3><br>
 </div>
-<p class="watch-intro probootstrap-animate"><a href="classify" class="popup-vimeo">Try it now<i class="icon-play2"></i></a></p><br>
+<button class="toclassify" onclick="javascript:window.location.href='classify'">Try Now</button>
 </div>
 </div>
 </div>
@@ -73,52 +74,47 @@
 <div class="container">
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
-<h2>A dream project...</h2>
-<p class="lead">Hi! I am a 15 year-old high school student in India who is figuring how AI can help cure predict and diagnose Chronic Kidney Disease. </p>
-</div>
-</div>
-<div class="row mb70">
-<div class="col-md-4 probootstrap-animate">
-<div class="probootstrap-box">
-<div class="icon text-center"><i class="icon-tools2"></i></div>
-<h3>Predict Disease</h3>
-<p>Using AI Algorithm built on Microsoft's Azure Machine Learning Architecture, our AI systems can predict whether a patient is affected by Chrnoic Kidney Disease or not.</p>
-<ul class="text-left with-icon colored">
-<li><i class="icon-radio-checked"></i> <span>Input simple medical records</span></li>
-<li><i class="icon-radio-checked"></i> <span>Our AI Algorithm processes it</span></li>
-<li><i class="icon-radio-checked"></i> <span>You are notified if you are vulnerable</span></li>
+<h3>
+  NephronAI (by NightLight AI)<br>
+  <small>Last updated: 22<sup>nd</sup> February 2020</small>
+</h3>
+<p class="lead">
+<h4>Data Privacy.</h4>
+Your privacy is important to us. Please read the <a href=”/privacy”>NightLight AI Privacy Policy</a> (the <b>"Privacy Policy"</b>) as it describes the types of data we collect from you and your devices (<b>"Data"</b>), how we use your Data, and the legal bases we have to process your Data. The Privacy Statement also describes how NephronAI uses your content, which are postings submitted by you to NightLight AI (the <b>“Company”</b>/<b>"us"</b>)  via our Services; and the raw input, files, photos, documents, and digital works that you upload, store, broadcast or share through the Services (<b>"Your Content"</b>). Where the processing is based on consent and to the extent permitted by law, by agreeing to these Terms, you consent to the company’s collection, use and disclosure of Your Content and Data as described in the Privacy Policy. In some cases, we will provide separate notice and request your consent as referenced in the Privacy Policy.
+<h4>Your Content.</h4>
+Many of our Services allow you to store or share Your Content or receive material from others. We don’t claim ownership of Your Content. Your Content remains Your Content and you are responsible for it. To the extent necessary to provide the Services to you and others, to protect you and the Services, and to improve our products and services, you grant to us a worldwide and royalty-free intellectual property license to use Your Content, for example, to make copies of, retain, transmit, reformat, display, and distribute via communication tools Your Content on the Services. If you publish Your Content in areas of the Service where it is available broadly online without restrictions, Your Content may appear in demonstrations or materials that promote the Service.
+<h4>Code of Coduct.</h4>
+By agreeing to these Terms, you’re understand that, when using the Services, you will follow these rules: 
+<ul>
+  <li>Don’t do anything illegal.</li>
+  <li>Don’t engage in any activity that exploits, harms, or threatens to harm children.</li>
+  <li>Don’t engage in activity that is fraudulent, false or misleading.</li>
+  <li>Don’t circumvent any restrictions on access to or availability of the Services. </li>
+  <li>Don’t engage in activity that is harmful to you, the Services or others (e.g., transmitting viruses, stalking, posting terrorist or violent extremist content, communicating hate speech, or advocating violence against others). </li>
+  <li>Don’t help others break these rules.</li>
 </ul>
-</div>
-</div>
-<div class="col-md-4 probootstrap-animate">
-<div class="probootstrap-box">
-<div class="icon text-center"><i class="icon-desktop"></i></div>
-<h3>Predict the Cause</h3>
-<p>If our AI Algorithm figure out that you are vulnerable and have been affected by Chronic Kidney Disease then we shall investigate the cause also.</p>
-<ul class="text-left with-icon colored">
-<li><i class="icon-radio-checked"></i> <span>Answer basic lifestyle questions</span></li>
-<li><i class="icon-radio-checked"></i> <span>Provide your disease history </span></li>
-<li><i class="icon-radio-checked"></i> <span>Another layer of AI will predict the cause</span></li><br/>
-</ul>
-</div>
-</div>
-<div class="col-md-4 probootstrap-animate">
-<div class="probootstrap-box">
-<div class="icon text-center"><i class="icon-lightbulb"></i></div>
-<h3>Recovery Strategy</h3>
-<p>Now, that we have told you about your diagnoseis as well as it's cause, then let's fight it. We'll recommend you certain lifestyle measures that you can take to at least lessen the ill effects of the disease.</p>
-<ul class="text-left with-icon colored">
-<li><i class="icon-radio-checked"></i> <span>Based on the cause predicted</span></li>
-<li><i class="icon-radio-checked"></i> <span>You'll get some lifestyle tips</span></li>
-<li><i class="icon-radio-checked"></i> <span>Follow them and keep up the fighting spirit</span></li>
-</ul>
-</div>
-</div>
-</div>
-<div class="row">
-<div class="col-md-4 col-md-offset-4 probootstrap-animate">
-<p class="text-center">
-<a href="classify" class="btn btn-primary btn-lg btn-block" role="button">Get My Prediction</a>
+<h4>Additional Equipment/Data Plans.</h4>
+To use many of the Services, you’ll need an internet connection and/or data/cellular plan. You are responsible for providing all connections, plans, and equipment needed to use the Services and for paying the fees charged by the provider(s) of your connections, plans, and equipment. Those fees are in addition to any fees you pay us for the Services and we will not reimburse you for such fees.
+<h4>Ending your Services.</h4>
+If your Services are canceled (whether by you or us), first your right to access the Services stops immediately. Second, we’ll delete Data or Your Content associated with your Service or will otherwise disassociate it from you (unless we are required by law to keep it, return it, or transfer it to you or a third party identified by you). As a result you may no longer be able to access any of the Services (or Your Content that you’ve stored on those Services).
+<h4>Support.</h4>
+Customer support for some Services is available at <a href="https://ayushanand18.github.io/contact">https://ayushanand18.github.io/contact</a>. Support may not be available for some preview or beta versions of features or Services.
+<h4>Updates to the Services or Software, and Changes to These Terms.</h4>
+We may change these Terms at any time, and we’ll tell you when we do by posting a notification on the Company’s page. Using the Services after the changes become effective means you agree to the new terms. If you don’t agree to the new terms, you must stop using the Services. Additionally, there may be times when we need to remove or change features or functionality of the Service or stop providing a Service or access to Third-Party Apps and Services altogether. Except to the extent required by applicable law, we have no obligation to provide a replacement of any material, Digital Goods, or applications previously purchased. We may release the Services or their features in a preview or beta version, which may not work correctly or in the same way the final version may work.
+<h4>Payment Terms.</h4>
+None of our services require you to provide payment information or any charge(s)/fee(s). Second, we don’t indulge in any of the acts that are transactional in nature. You are recommended to stay beware of fraudulent/fake people, messages, social media campaigns, which claim to be affiliated to the Company and ask for any payment. All our services are available to any individual/organization without payment.
+<h4>Collecting Health-related Information.</h4>
+Our Services are intended for you to share your personal health-related information and information about other people (such as your family) with their consent. You also agree to provide Your Data (including Health-related information) for us to process and recommend the results on an as-is basis. Second, we may store Your Data after removing personally identifiable information, in a secure and encrypted storage location powered by Google&reg; Firestore.
+<h4>Reservation of Rights and Feedback.</h4>
+Except as expressly provided under these Terms, the Company does not grant you a license or any other rights of any type under any patents, know-how, copyrights, trade secrets, trademarks or other intellectual property owned or controlled by the Company or any related entity, including but not limited to any name, trade dress, logo or equivalents. If you give to us any idea, proposal, suggestion or feedback, including without limitation ideas for new products, technologies, promotions, product names, product feedback and product improvements (<b>"Feedback"</b>), you give to the Company, without charge, royalties or other obligation to you, the right to make, have made, create derivative works, use, share and commercialize your Feedback in any way and for any purpose. You will not give Feedback that is subject to a license that requires us to license its software, technologies or documentation to any third party because we include your Feedback in them.
+<h4>Notices and procedure for making claims of intellectual property infringement.</h4>
+Our Company respects the intellectual property rights of third parties. If you wish to send a notice of intellectual property infringement, including claims of copyright infringement, please write to us at <a href="https://ayushanand18.github.io/contact">https://ayushanand18.github.io/contact</a>. <b>ONLY INQUIRIES RELEVANT TO THIS PROCEDURE WILL RECEIVE A RESPONSE.</b><br>
+<br>
+<b>
+  NephronAI does not provide guaranteed medical or any other health care advice, diagnosis, or treatment. The information/resource(s) made available to you by our Services are preliminary and we neither ascertain great degree of accuracy. Moreover, do not consider the advice outlined here as final and always seek the advice of your physician or other qualified health care provider with any questions you may have regarding a medical condition, diet, fitness, or wellness program. Never disregard professional medical advice or delay in seeking it because of information you accessed on or through the Services.
+  <br>
+  In case any of the exclusion of any part of the Services from these terms, our Company will reserve exclusive rights over them. For more information or a detailed explanation of any part of these terms of service(s), please write to us at <a href="https://ayushanand18.github.io/contact">https://ayushanand18.github.io/contact</a>. Using any of our services (including providing Your Data to our website) means you agree to these Terms.
+</b>
 </p>
 </div>
 </div>
@@ -169,6 +165,7 @@
 <li><a href="/">Home (NightLight AI)</a></li>
 <li><a href="/privacy">Privacy</a></li>
 <li><a href="terms">Terms</a></li>
+<small>By using our services you agree to our <a href="terms">Terms of Services</a> and <a href="/cookie">Cookie Policy</a></small>
 </ul>
 </div>
 </div>
