--- a/about.html
+++ b/about.html
@@ -14,10 +14,11 @@
 <title>About NephronAI</title>
 <meta name="description" content="Know About NephronAI - an AI project that uses AI to fight Chronic Kidney Disease. &copy; NightLight AI">
 <meta name="keywords" content="NephronAI, about nephronai, nightlight ai, about">
-<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
 <link rel="icon" type="image/png" href="assets/logo192.png">
+<link rel="stylesheet" href="css/classify.min.css">
 
 <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -60,8 +61,8 @@
 <h1 class="probootstrap-animate">About NephronAI</h1>
 <div class="probootstrap-subtitle probootstrap-animate">
 <h2>We are using AI to predict, provide a cause and deliver solution to Chronic Kidney Disease.</h2>
-</div>
-<p class="watch-intro probootstrap-animate"><a href="classify">Get Yourself Checked <i class="icon-play2"></i></a></p>
+</div><br>
+<button class="toclassify" onclick='javascript:window.locatin.href="classify"'>Try Now</button>
 </div>
 </div>
 </div>
@@ -141,6 +142,7 @@ But if chronic kidney disease is detected early then we can easily save thousand
 <li><a href="/">Home (NightLight AI)</a></li>
 <li><a href="/privacy">Privacy</a></li>
 <li><a href="terms">Terms</a></li>
+<small>By using our services you agree to our <a href="terms">Terms of Services</a> and <a href="/cookie">Cookie Policy</a></small>
 </ul>
 </div>
 </div>
