--- a/cause.html
+++ b/cause.html
@@ -8,7 +8,7 @@
 <title>Know the Cause of Chronic Kidney Disease</title>
 <meta name="description" content="Know the cause of your Chronic Kidney Disease with the help of AI! Delivered to you by NephronAI.">
 <meta name="keywords" content="NephronAI, chronic kidney disease,knwo the cause, cause of chronic kidney disease, diagnos chronic kidney disease, nightlight ai, nephron, ayush anand">
-<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
 <link rel="stylesheet" href="css/classify.min.css">
@@ -402,6 +402,7 @@
 <li><a href="/">Home (NightLight AI)</a></li>
 <li><a href="/privacy">Privacy</a></li>
 <li><a href="terms">Terms</a></li>
+<small>By using our services you agree to our <a href="terms">Terms of Services</a> and <a href="/cookie">Cookie Policy</a></small>
 </ul>
 </div>
 </div>
