--- a/contribute.html
+++ b/contribute.html
@@ -15,10 +15,11 @@
 <title>NephronAI | Contribute</title>
 <meta name="description" content="Help us grow bigger. Contribute to Nephron AI - an AI project that uses AI to fight Chronic Kidney Disease.">
 <meta name="keywords" content="AI, Chronic Kidney Disease, Ayush Anand, Ayush, Anand, NightLight, Nephron AI, Nephron">
-<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
 <link rel="icon" type="image/png" href="assets/logo192.png">
+<link rel="stylesheet" href="css/classify.min.css">
 <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
       <script src="js/vendor/respond.min.js"></script>
@@ -62,7 +63,7 @@
 <div class="probootstrap-subtitle probootstrap-animate">
 <h2>We don't feel good without you. That's because we believe innovation is better with 'we' than 'I'.</a></h2>
 </div>
-<p class="watch-intro probootstrap-animate"><a href="about" class="popup-vimeo">Know more <i class="icon-play2"></i></a></p>
+<button class="toclassify" onclick='javascript:window.location.href="about"'>Know More</button>
 </div>
 </div>
 </div>
@@ -140,6 +141,7 @@
 <li><a href="/">Home (NightLight AI)</a></li>
 <li><a href="/privacy">Privacy</a></li>
 <li><a href="terms">Terms</a></li>
+<small>By using our services you agree to our <a href="terms">Terms of Services</a> and <a href="/cookie">Cookie Policy</a></small>
 </ul>
 </div>
 </div>
