--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <title>NephronAI </title>
 <meta name="description" content="NephronAI - an AI project by NightLight AI that aims to uses AI to counter Chronic Kidney Disease.">
 <meta name="keywords" content="NephronAI, chronic kidney disease, nightlight ai">
-<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
+<link rel="stylesheet" href="css/classify.min.css">
 <link rel="icon" type="image/png" href="assets/logo192.png">
 <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -56,12 +57,12 @@
 <section class="probootstrap-intro" style="" data-stellar-background-ratio="0.5">
 <div class="container-fluid">
 <div class="row">
-<div class="col-md-7 probootstrap-intro-text">
-<h1 class="probootstrap-animate">Human + AI = NephronAI is fighting Chronic Kidney Disease</h1>
+<div class="col-md-10 probootstrap-intro-text">
+<h1 class="probootstrap-animate" style="line-height:unset;">Human + AI = <font style="background:black;color:white">NephronAI</font> is fighting <font style="background:black;color:white;">Chronic Kidney Disease</font></h1>
 <div class="probootstrap-subtitle probootstrap-animate">
 <h2>With the power AI, and intelligence of the Human brain we have created a solution to answer World's Medical Crisis- Chronic Kidney Disease.</h2>
-</div>
-<p class="watch-intro probootstrap-animate"><a href="classify" class="popup-vimeo">Try it now<i class="icon-play2"></i></a></p><br>
+</div><br>
+<button class="toclassify" onclick="javascript:window.location.href='classify'">Try Now</button>
 </div>
 </div>
 </div>
@@ -169,6 +170,7 @@
 <li><a href="/">Home (NightLight AI)</a></li>
 <li><a href="/privacy">Privacy</a></li>
 <li><a href="terms">Terms</a></li>
+<small>By using our services you agree to our <a href="terms">Terms of Services</a> and <a href="/cookie">Cookie Policy</a></small>
 </ul>
 </div>
 </div>
