Additional changes in UI

--- a/contribute.html
+++ b/contribute.html
@@ -59,7 +59,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-7 probootstrap-intro-text">
-<h1 class="probootstrap-animate">Contribute to NephronAI</h1>
+<h1 class="probootstrap-animate">Contribute to <font style="background:black">NephronAI</font></h1>
 <div class="probootstrap-subtitle probootstrap-animate">
 <h2>We don't feel good without you. That's because we believe innovation is better with 'we' than 'I'.</a></h2>
 </div>
