--- a/terms.html
+++ b/terms.html
@@ -58,7 +58,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-7 probootstrap-intro-text">
-<h1 class="probootstrap-animate">Terms of Service NephronAI</h1>
+<h1 class="probootstrap-animate">Terms of Service : <font style="background:black">NephronAI</font></h1>
 <div class="probootstrap-subtitle probootstrap-animate">
 <h3 style="color:white;">We're aren't the same without you! But our Terms of Services are equally flexible as the services we provide, if not more. Using our services directly mean you agree to them.</h3><br>
 </div>
