--- a/about.html
+++ b/about.html
@@ -58,11 +58,11 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-7 probootstrap-intro-text">
-<h1 class="probootstrap-animate">About NephronAI</h1>
+<h1 class="probootstrap-animate">About <font style="background:black;">NephronAI</font></h1>
 <div class="probootstrap-subtitle probootstrap-animate">
 <h2>We are using AI to predict, provide a cause and deliver solution to Chronic Kidney Disease.</h2>
 </div><br>
-<button class="toclassify" onclick='javascript:window.locatin.href="classify"'>Try Now</button>
+<button class="toclassify" onclick='javascript:window.location.href="classify"'>Try Now</button>
 </div>
 </div>
 </div>
