--- a/classify.html
+++ b/classify.html
@@ -72,7 +72,7 @@
         <input type="submit" class="btn btn-primary next" value="Next">
         <div class="details"><br/>
             <a href="javascript:void(0)" class="show-details">What is Specific Gravity?</a>
-            <p class="information">Specific Gravty refers to the ratio of the density of a substance to the density of a standard, usually water for a liquid or solid, and air for a gas. It is also measured for Human Body.</p>
+            <p class="information">Specific Gravity refers to the ratio of the density of a substance to the density of a standard, usually water for a liquid or solid, and air for a gas. It is also measured for Human Body.</p>
         </div>
         </form>
     </div>
