--- a/classify.html
+++ b/classify.html
@@ -115,7 +115,7 @@
         <form id="forms classify-form">
         <h4>Heamoglobin</h4>
         <p>The pigment that gives blood its red color, in <i>grams</i>. For example, 15.2</p>
-        <br/><input type="text" placeholder="" id="hemot"/><br/><br/>
+        <br/><input type="number" placeholder="" id="hemot"/><br/><br/>
         <input type="submit" class="btn btn-primary next" value="Next">
         <div class="details"><br/>
             <a href="javascript:void(0)" class="show-details">What is Heamoglobin?</a>
