Added cause feature in step#3

--- a/laststeps.html
+++ b/laststeps.html
@@ -69,6 +69,7 @@
     <div class="diabetes container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
+            <h3> How does diabetes causes Chronic Kidney Disease?</h3> <p>High blood glucose, also called blood sugar, can damage the blood vessels in your kidneys. When the blood vessels are damaged, they don't work as well. Many people with diabetes also develop high blood pressure, which can also damage your kidneys.</p>
             <h3>	Exercise	</h3><p>	Regular physical activity helps you feel better. It also improves your sensitivity to insulin, which means your blood sugar levels can become more stable.	</p>
             <h3>	Eat a well-balanced diet	</h3><p>	Try to fill your plate with non-starchy food like Asparagus, Broccoli, Broccoli, Carrot, Low-fat or non-fat dairy products, Citrus fruits, etc. Plus have add some whole grains like Brown rice, Millet, Whole whear and Oats.	</p>
             <h3>	Reduce mental stress	</h3><p>	If you're stressed, you may exercise less, drink more, and can also lead to risen blood sugar levels. If something has you bothered, try to make changes that can help you relax. Do whatever you want.	</p>
@@ -84,6 +85,7 @@
     <div class="highbp container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
+            <h3> How does high blood pressure cause Chronic Kidney Disease</h3> <p> The nephrons (basic filtration units of kidney) in the kidneys are supplied with a dense network of blood vessels, and high volumes of blood flow through them. Over time, uncontrolled high blood pressure can cause arteries around the kidneys to narrow, weaken or harden. These damaged arteries are not able to deliver enough blood to the kidney tissue. Thus, causing Chronic Kidney Disease.</p>
             <h3>	Increase activity and exercise more	</h3><p>	As you regularly increase your heart and breathing rates, over time your heart gets stronger and pumps with less effort. This puts less pressure on your arteries and lowers your blood pressure. Just do it regularly and work up to at least half an hour per day of moderate activity.	</p>
             <h3>	Lose weight if you’re overweight	</h3><p>	If you’re overweight, losing even 5 to 10 pounds can reduce your blood pressure. Plus, you’ll lower your risk for other medical problems.	</p>
             <h3>	Cut back on sugar and refined carbohydrates	</h3><p>	Many scientific studies show that restricting sugar and refined carbohydrates can help you lose weight and lower your blood pressure. Refined Carbphydrates include white bread, pizza dough, pasta, pastries, white flour, white rice, sweet desserts, etc.	</p>
@@ -97,7 +99,8 @@
     </div>
     <div class="genetics container">
     <div class="row">
-        <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
+        <div class="col-md-8 col-md-offset-2 section-heading mb50 t<ext-center probootstrap-animate">
+            <h3>    How does genetics cause Chronic Kidney Disease?</h3> <p>    At the time of birth, genetic information is passed from parents to the offspring. The genes linked to Chronic Kidney Disease are characteristically dominant. This means only a single gene from parent can cause Chronic Kidney Disease in a child.</p>
             <h3>	Since the disease is actually inherited we can't suggest you some measures to undo it. But you can always take measures to check it.	</h3><p>		</p>
             <h3>	Manage your blood sugar	</h3><p>	Diabetes increases your risk for heart disease and kidney failure. That’s just one reason to manage your blood sugar.	</p>
             <h3>	Manage your blood pressure 	</h3><p>	High blood pressure can increase your risk for heart disease as well as kidney failure.	</p>
@@ -112,6 +115,7 @@
     <div class="metal container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
+            <h3>    How does heavy metal poisoning cause Chronic Kidney Disease?</h3><p>    Heavy metals are chemical elements almost 5 times heavier than water. Heavy metals are chemical elements but high amounts results in damage of the central nervous system, including Kidney. Therapeutic, accidental or occupational exposure to several metals may cause renal toxicity, and subsequently Chronic Kidney Disease upon regular exposure.</p>
             <h3>	For mild cases	</h3><p>	Just eliminating your exposure to heavy metals can be enough to treat the condition. Depending on the underlying cause, this might mean taking some time away from work or changing your diet.  You can limit your consumption of fish known to contain higher levels of mercury. And make sure to only purchase supplements and spices from trusted, high-quality sources.	</p>
             <h3>	For severe cases	</h3><p>	For more severe cases, the standard treatment is chelation therapy. This involves giving medication, either through a pill or injection, that binds to the heavy metals in your body. As they bind to the metals, chelators help to usher them out of your body as waste.	</p>
             <h3>	Please see a doctor immediately. Your doctor can give you more specific recommendations on how to reduce your exposure.	</h3><p>		</p>
@@ -119,7 +123,7 @@
         </div>
     </div>
     </div>
-    <div class="metal container">
+    <div class="others container">
     <div class="row">
         <div class="others col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
             <h3>	Oops!	</h3><p>	There seems an error. Were you navigated to this page after you underwent a survey from Step #2 of our service. If not then take it at <a href="cause"> here</a>. You'll be automatically navigated</p>
