Updated validation rules

--- a/classify.html
+++ b/classify.html
@@ -66,6 +66,7 @@
     <!-- Form fields with Information to gather user input -->
     <div class="qone">
         <form id="forms classify-form">
+        <span class="clos">&times;Close</span> <span>1 of 8</span>
         <h4>Specific Gravity:</h4>
         <p>You need to get a medical test for this or you can skip it. It is <i>numeric</i></p>
         <input type="number" placeholder="" id="sgt"/><br/><br/>
@@ -79,6 +80,7 @@
 
     <div class="qtwo">
         <form id="forms classify-form">
+            <span class="back">< Back</span> <span>2 of 8</span>
         <h4>Albumin</h4>
         <p>Select from this list</p>
         <br/><select class="select" id="alt">
@@ -100,6 +102,7 @@
 
     <div class="qthree">
         <form id="forms classify-form">
+            <span class="back">< Back</span> <span>3 of 8</span>
         <h4>Serum Creatinine</h4>
         <p>The Serum creatinine in <i>mg/dl</i><br/>
         For example 1.2</p><br/>
@@ -113,6 +116,7 @@
     </div>
     <div class="qfour">
         <form id="forms classify-form">
+            <span class="back">< Back</span> <span>4 of 8</span>
         <h4>Heamoglobin</h4>
         <p>The pigment that gives blood its red color, in <i>grams</i>. For example, 15.2</p>
         <br/><input type="number" placeholder="" id="hemot"/><br/><br/>
@@ -125,6 +129,7 @@
     </div>
     <div class="qfive">
         <form id="forms classify-form">
+            <span class="back">< Back</span> <span>5 of 8</span>
         <h4>Packed Cell Volume</h4>
         <p>Look into your blood report in the lipids section. it is ussually <i>numeric</i>. For example, 64 </p>
         <br/><input type="number" placeholder="" id="pcvt"/><br/><br/>
@@ -137,6 +142,7 @@
     </div>
     <div class="qsix">
         <form id="forms classify-form">
+            <span class="back">< Back</span> <span>6 of 8</span>
         <h4>White Blood Cell Count</h4>
         <p>The White blood cell count in <i>cells/cumm</i>. For example, 7800</p>
         <br/><input type="number" placeholder="" id="wct"/><br/><br/>
@@ -149,6 +155,7 @@
     </div>
     <div class="qseven">
         <form id="forms classify-form">
+            <span class="back">< Back</span> <span>7 of 8</span>
         <h4>Red Blood Cell Count</h4>
         <p>The red blood cell count in <i>millions/cmm</i>. For example, 3.4</p>
         <br/><input type="number" placeholder="" id="rct"/><br/><br/>
@@ -161,6 +168,7 @@
     </div>
     <div class="qeight">
         <form id="forms classify-form">
+            <span class="back">< Back</span> <span>8 of 8</span>
         <h4>Hypertension</h4>
         <br/><select class="select"  id="htnt">
             <option class="htn" value="">--Select--</option>
