Added information in /about

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 <div class="col-md-7 probootstrap-intro-text">
 <h1 class="probootstrap-animate">About <font style="background:black;">NephronAI</font></h1>
 <div class="probootstrap-subtitle probootstrap-animate">
-<h2>We are using AI to predict, provide a cause and deliver solution to Chronic Kidney Disease.</h2>
+<h2>We are using AI to predict, provide a cause and deliver solution to Chronic Kidney Disease. Read below to find out more &darr;</h2>
 </div><br>
 <button class="toclassify" onclick='javascript:window.location.href="classify"'>Try Now</button>
 </div>
@@ -74,8 +74,10 @@
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
 <h2>Our Aim</h2>
-<p class="lead">Kidneys are essential organs of human body that perform an even important function - filter out waste from our body. Chronic kidney disease includes conditions that damage your kidneys and decrease their ability to keep you healthy by doing the jobs listed. If kidney disease gets worse, wastes can build to high levels in your blood and make you feel sick. When kidney disease progresses, it may eventually lead to kidney failure, which requires dialysis or a kidney transplant to maintain life.<br/>
-But if chronic kidney disease is detected early then we can easily save thousands of lives worldwide.
+<p class="lead">Kidneys are essential organs of human body that perform an even important function - filter out waste from our body. <b>But what happens if they get damaged - Chronic Kidney Disease.</b><br/>
+Chronic kidney disease (CKD) means your kidneys are damaged and losing their ability to keep you healthy. In the early stages of the disease, most people do not have symptoms. But as CKD gets worse, wastes can build up in your blood and make you feel sick. You may develop other problems like high blood pressure, anemia, weak bones, poor nutritional health, and nerve damage. Because kidneys are vital to so many of the body’s functions, CKD also increases your risk of having heart and blood vessel disease. While these problems may happen slowly and without symptoms, they can lead to kidney failure, which can appear without warning. Once kidneys fail, dialysis or a kidney transplant is needed to stay alive. This stage of CKD is known as kidney failure, end-stage kidney disease (ESKD), or end-stage renal disease (ESRD).
+It simply decreases their ability to keep you healthy by doing the jobs listed.<br/>
+But if chronic kidney disease is detected early then we can easily save hundreds of thousands of lives worldwide.
 </p>
 </div>
 </div>
