--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
 <h2>A dream project...</h2>
-<p class="lead">Hi! I am a 15 year-old high school student in India who is figuring how AI can help cure predict and diagnose Chronic Kidney Disease. </p>
+<p class="lead">Chronic kidney disease, or CKD, causes more deaths than breast cancer or prostate cancer. It is the under-recognized public health crisis. It affects an estimated 37 million people in the U.S. (15% of the adult population; more than 1 in 7 adults) and approximately 90% of those with CKD don’t even know they have it.  1 in 3 American adults (approximately 80 million people) is at risk for CKD. CKD is more common in women (15%) than men (12%).  CKD is the 9th leading cause of death in the U.S.  In 2016, over 500,000 patients received dialysis treatment, and over 200,000 lived with a kidney transplant. <br/>
+Even though I am a very young member of this planet, a 15 year-old high schooler from India, I decided to figure how AI can help predict, diagnose and treat Chronic Kidney Disease. </p>
 </div>
 </div>
 <div class="row mb70">
